[project]
name = "blind-test"
version = "0.1.0"
description = "Music blind test generator with video output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "decorator==4.4.2",
    "google-api-python-client>=2.185.0",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==1.0.3",
    "numpy==2.2.6",
    "oauth2client>=4.1.3",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydub==0.25.1",
    "python-dotenv==1.1.1",
    "random2==1.0.2",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
]

[project.scripts]
blind-test = "src.blind_test_generator:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
